chore: apply Java 21 migration and security hardening changes (in progress)